--- a/views/home.ejs
+++ b/views/home.ejs
@@ -141,7 +141,7 @@
                 <a
                   class="nav-link text-light"
                   aria-current="page"
-                  href="/immigration-dept/home"
+                  href="/"
                 >
                   <span data-feather="home"></span>
                   Log Out
