--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -13,6 +13,14 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+
+    <!-- jquery -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+
+    <!-- sweet alerts -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <style>
       html,
       body {
@@ -76,21 +84,22 @@
     <main class="form-signin">
       <h1>Welcome</h1>
       <button type="button" class="w-100 btn btn-lg btn-primary m-2">
-          Sign in with Facebook
-       </button>
-       <button type="button" class="w-100 btn btn-lg btn-danger m-2">
-          Sign in with Google
-        </button>
-        <hr>
-      <form>
+        Sign in with Facebook
+      </button>
+      <button type="button" class="w-100 btn btn-lg btn-danger m-2">
+        Sign in with Google
+      </button>
+      <hr />
+      <form class="needs-validation" novalidate id="createRequirement">
         <h1 class="h3 mb-3 fw-normal">Sign in</h1>
 
         <div class="form-floating">
           <input
             type="email"
             class="form-control"
-            id="floatingInput"
+            name="email"
             placeholder="name@example.com"
+            required
           />
           <label for="floatingInput">Email address</label>
         </div>
@@ -98,8 +107,9 @@
           <input
             type="password"
             class="form-control"
-            id="floatingPassword"
+            name="password"
             placeholder="Password"
+            required
           />
           <label for="floatingPassword">Password</label>
         </div>
@@ -115,6 +125,17 @@
       </form>
     </main>
 
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
       integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -126,4 +147,27 @@
       crossorigin="anonymous"
     ></script>
   </body>
+  <script src="/javascripts/signin.js"></script>
+  <script>
+    (function () {
+      "use strict";
+
+      var forms = document.querySelectorAll(".needs-validation");
+
+      Array.prototype.slice.call(forms).forEach(function (form) {
+        form.addEventListener(
+          "submit",
+          function (event) {
+            if (!form.checkValidity()) {
+              event.preventDefault();
+              event.stopPropagation();
+            }
+            form.classList.add("was-validated");
+            createUser();
+          },
+          false
+        );
+      });
+    })();
+  </script>
 </html>
