--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -83,12 +83,12 @@
   <body class="text-center">
     <main class="form-signin">
       <h1>Welcome</h1>
-      <button type="button" class="w-100 btn btn-lg btn-primary m-2">
+      <a type="button" class="w-100 btn btn-lg btn-primary m-2" href="/auth/facebook">
         Sign in with Facebook
-      </button>
-      <button type="button" class="w-100 btn btn-lg btn-danger m-2">
+      </a>
+      <a type="button" class="w-100 btn btn-lg btn-danger m-2" href="/auth/google">
         Sign in with Google
-      </button>
+      </a>
       <hr />
       <form class="needs-validation" novalidate id="createRequirement">
         <h1 class="h3 mb-3 fw-normal">Sign in</h1>
