--- a/views/home.ejs
+++ b/views/home.ejs
@@ -154,7 +154,7 @@
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 pt-3" id="body">
           <div class="p-5">
             <h3 class="font-weight-bold">Welcome,</h3>
-            <h3 class="font-weight-bold">Abhijeeth Chateerji</h3>
+            <h3 class="font-weight-bold"></h3>
             <form>
               <img
                 src="/images/profile.jpg"
