--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,11 +68,6 @@
 
     <!-- Custom styles for this template -->
     <link
-      href="/views/ImmigrationDept/Certificate/Dashboard/dashboard.css"
-      rel="stylesheet"
-    />
-
-    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
@@ -140,10 +135,9 @@
               <li class="nav-item">
                 <a
                   class="nav-link text-light"
+                  style="cursor: pointer;"
                   aria-current="page"
-                  href="/"
-                >
-                  <span data-feather="home"></span>
+                  onclick="logOut()">
                   Log Out
                 </a>
               </li>
@@ -155,7 +149,7 @@
           <div class="p-5">
             <h3 class="font-weight-bold">Welcome,</h3>
             <h3 class="font-weight-bold"></h3>
-            <form>
+            <form class="needs-validation" novalidate id="createRequirement">
               <img
                 src="/images/profile.jpg"
                 class="img-fluid"
@@ -170,6 +164,8 @@
                     type="text"
                     class="form-control required"
                     placeholder="Full Name"
+                    name="fullName"
+                    required
                   />
                 </div>
                 <div class="col-4">
@@ -177,6 +173,8 @@
                     type="email"
                     class="form-control required"
                     placeholder="Email ID"
+                    name="emailID"
+                    required
                   />
                 </div>
               </div>
@@ -186,11 +184,13 @@
                     type="number"
                     class="form-control required"
                     placeholder="Mobile Number"
+                    name="mobileNumber"
+                    required
                   />
                 </div>
                 <div class="col-4">
-                  <select id="nationality" class="form-control">
-                    <option value="default">Nationality</option>
+                  <select class="form-select" name="nationality" required>
+                    <option selected>Open this select menu</option>
                     <option value="indian">Indian</option>
                     <option value="foreigner">Foreigner</option>
                   </select>
@@ -202,7 +202,8 @@
                       <input
                       type="file"
                       class="custom-file-input"
-                      id="inputGroupFile04"
+                      name="aadhaar"
+                      required
                     />
                   </div>
               </div>
@@ -234,4 +235,27 @@
       crossorigin="anonymous"
     ></script>
   </body>
+  <script src="javascripts/formsubmit.js"></script>
+  <script>
+    (function () {
+      "use strict";
+
+      var forms = document.querySelectorAll(".needs-validation");
+
+      Array.prototype.slice.call(forms).forEach(function (form) {
+        form.addEventListener(
+          "submit",
+          function (event) {
+            if (!form.checkValidity()) {
+              event.preventDefault();
+              event.stopPropagation();
+            }
+            form.classList.add("was-validated");
+            formSubmit();
+          },
+          false
+        );
+      });
+    })();
+  </script>
 </html>
