--- a/views/homeView.ejs
+++ b/views/homeView.ejs
@@ -212,7 +212,7 @@
               </div>
               <div class="row">
                 <div class="col-4">
-                  <button type="button" class="btn btn-primary mt-4">
+                  <button type="button" class="btn btn-primary mt-4" onclick="download()">
                     Download
                   </button>
                 </div>
